// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Linkify can receive linkStyle 1`] = `
<DocumentFragment>
  .c1 {
  color: inherit;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  white-space: pre-wrap;
}

.c0 p:first-child {
  margin-top: 0;
}

.c0 div + div {
  margin-top: 8px;
}

<div
    class="c0 re-linkify"
  >
    <div>
      Hello! 
      <a
        class="c1"
        href="https://google.com"
        rel="noopener noreferrer"
        style="color: magenta;"
        target="_blank"
      >
        https://google.com
      </a>
       is a cool site.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Linkify can render markdown 1`] = `
<DocumentFragment>
  .c1 {
  color: inherit;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  white-space: pre-wrap;
}

.c0 p:first-child {
  margin-top: 0;
}

.c0 div + div {
  margin-top: 8px;
}

<div
    class="c0 re-linkify"
  >
    <div>
      <a
        class="c1"
        href="http://google.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        this is a link
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Linkify converts links to anchor tags 1`] = `
<DocumentFragment>
  .c1 {
  color: inherit;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  white-space: pre-wrap;
}

.c0 p:first-child {
  margin-top: 0;
}

.c0 div + div {
  margin-top: 8px;
}

<div
    class="c0 re-linkify"
  >
    <div>
      Hello! 
      <a
        class="c1"
        href="https://google.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        https://google.com
      </a>
       is a cool site.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Linkify escapes HTML entities 1`] = `
<DocumentFragment>
  .c0 {
  white-space: pre-wrap;
}

.c0 p:first-child {
  margin-top: 0;
}

.c0 div + div {
  margin-top: 8px;
}

<div
    class="c0 re-linkify"
  >
    <div>
      &lt;img src="fake.jpg" onError={() =&gt; {}} alt="hacker" /&gt;&lt;span&gt;heheh got hacked&lt;/span&gt;
    </div>
  </div>
</DocumentFragment>
`;

exports[`Linkify reformats code blocks 1`] = `
<DocumentFragment>
  .c0 {
  white-space: pre-wrap;
}

.c0 p:first-child {
  margin-top: 0;
}

.c0 div + div {
  margin-top: 8px;
}

<div
    class="c0 re-linkify"
  >
    <div>
      dear doctor,
    </div>
    <div>
      I'm "5'9" and 160'
    </div>
  </div>
</DocumentFragment>
`;
